--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -56,4 +56,19 @@ body {
 
 .ql-editor {
   font-size: larger;
+  padding: 8px;
+}
+
+.ql-syntax {
+  background-color: #2d2d2d !important;
+  /* Dark background */
+  color: #f8f8f2 !important;
+  /* Light text color */
+  padding: 10px !important;
+  /* Padding around code */
+  border-radius: 4px;
+  /* Rounded corners */
+  font-family: 'Courier New', Courier, monospace !important;
+  /* Monospace font */
+  font-size: 14px !important;
 }
