--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -59,6 +59,23 @@ body {
   font-size: 14px !important;
 }
 
+.ql-snow {
+  h1 {
+    font-size: 2em;
+    font-weight: bold;
+  }
+
+  h2 {
+    font-size: 1.75em;
+    font-weight: bold;
+  }
+
+  h3 {
+    font-size: 1.5em;
+    font-weight: bold;
+  }
+}
+
 @layer base {
   :root {
     --radius: 0.5rem;
